Fix on mobile and added background image

--- a/css/main.css
+++ b/css/main.css
@@ -30,12 +30,14 @@
  */
 
  ::-moz-selection {
-    background: #b3d4fc;
+    background: #B89B45;
+    color: #000;
     text-shadow: none;
 }
 
 ::selection {
-    background: #b3d4fc;
+    background: #B89B45;
+    color: #000;
     text-shadow: none;
 }
 
@@ -104,6 +106,7 @@ body {
   margin: 0;
   font-size: 16px;
   background-color: #121212;
+  background-image: url(../img/bg.png);
   height: 100%;
 }
 
@@ -175,8 +178,31 @@ body {
   font-size: 24px;
   margin-top: -85px;
   text-align: center;
-  margin: 0;
+  background: black;
+  display: inline-table;
+  margin: 0 auto;
+  padding: 5px 30px;
 }
+
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+.fade-in {
+  opacity:0;  
+  -webkit-animation:fadeIn ease-in 650ms;  
+  -moz-animation:fadeIn ease-in 650ms;
+  animation:fadeIn ease-in 650ms;
+
+  -webkit-animation-fill-mode:forwards;  
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
+
+  -webkit-animation-duration:650ms;
+  -moz-animation-duration:650ms;
+  animation-duration:650ms;
+}
+
 
 /* ==========================================================================
    Helper classes
